@@ -531,6 +531,20 @@ Example  : pray deathfinger orc\n\r\
 The caster points the evil finger of their deity at a target, delivering a devastating \
 and almost deadly blow.
 
+PRAYER_DEATH_GUARD=<ABILITY>\
+Usage    : PRAY "DEATH GUARD" [TARGET NAME]\n\r\
+Example  : pray "death guard" bob\n\r\
+The target of this prayer comes under the guardianship of the cleric and his or her God. \
+When the target falls below 30% hit points, or 130% of their wimpy setting, the cleric will \
+automatically cast one of their basic healing spells: Heal, Cure Critical, Cure Serious, or \
+Cure Light Wounds.
+
+PRAYER_DEATH_KNELL=<ABILITY>\
+Usage    : PRAY "DEATH KNELL" [TARGET NAME]\n\r\
+Example  : pray "death knell" bob\n\r\
+The target of this prayer comes under a curse that will cause them to instantly die should \
+they fall below 10% health.
+
 DEATH`S_DOOR=PRAYER_DEATHS_DOOR
 PRAYER_DEATHS_DOOR=<ABILITY>\
 Usage    : PRAY "DEATHS DOOR" [TARGET NAME]\n\r\
